--- a/app/src/main/res/layout/form_edit_profil.xml
+++ b/app/src/main/res/layout/form_edit_profil.xml
@@ -55,6 +55,14 @@
                 android:layout_marginBottom="14dp"
                 android:layout_marginHorizontal="27dp"
                 android:orientation="vertical">
+                <TextView
+                    android:id="@+id/txtNamaPasien"
+                    android:textColor="#828282"
+                    android:textSize="14sp"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:hint="Nama Lengkap"
+                    />
                 <EditText
                     android:id="@+id/nama_pasien"
                     android:textSize="14sp"
@@ -99,11 +107,20 @@
                 android:layout_marginBottom="14dp"
                 android:layout_marginHorizontal="27dp"
                 android:orientation="vertical">
+                <TextView
+                    android:id="@+id/txtTanggalLahir"
+                    android:textColor="#828282"
+                    android:textSize="14sp"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:hint="Tanggal Lahir"
+                    />
                 <EditText
                     android:id="@+id/tanggal_lahir_pasien"
                     android:textSize="14sp"
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent"
+                    android:focusable="false"
                     android:hint="Tanggal Lahir"/>
             </LinearLayout>
             <LinearLayout
@@ -116,7 +133,14 @@
                 android:orientation="vertical"
                 android:paddingHorizontal="17dp"
                 android:paddingVertical="14dp">
-
+                <TextView
+                    android:id="@+id/txtAlamat"
+                    android:textColor="#828282"
+                    android:textSize="14sp"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:hint="Alamat"
+                    />
                 <EditText
                     android:id="@+id/alamat_pasien"
                     android:layout_width="match_parent"
